all classess in one jar