@@ -39,21 +39,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.rkmsh</groupId>
-            <artifactId>aws-lite-core</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.rkmsh</groupId>
-            <artifactId>aws-lite-s3</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.rkmsh</groupId>
-            <artifactId>aws-lite-sqs</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>3.5.3</version>
@@ -144,12 +129,12 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.central</groupId>
-                <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>0.8.0</version>
-                <extensions>true</extensions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <publishingServerId>central</publishingServerId>
+                    <source>24</source>
+                    <target>24</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
